project draft added to git

--- a/src/public/output/7-strikeRateOfaBatsmanForEachSeason.json
+++ b/src/public/output/7-strikeRateOfaBatsmanForEachSeason.json
@@ -1,12 +1,14 @@
 {
-  "2008": 133.55,
-  "2009": 127.2,
-  "2010": 136.67,
-  "2011": 159.59,
-  "2012": 128.73,
-  "2013": 163.57,
-  "2014": 150.2,
-  "2015": 121.97,
-  "2016": 135.24,
-  "2017": 116
+  "MS Dhoni": {
+    "2008": 133.55,
+    "2009": 127.2,
+    "2010": 136.67,
+    "2011": 159.59,
+    "2012": 128.73,
+    "2013": 163.57,
+    "2014": 150.2,
+    "2015": 121.97,
+    "2016": 135.24,
+    "2017": 116
+  }
 }
